--- a/Life on Mars/Life on Mars/Info.plist
+++ b/Life on Mars/Life on Mars/Info.plist
@@ -28,7 +28,7 @@
 		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>www.api.nasa.gov</key>
+			<key>*.nasa.gov</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
@@ -56,7 +56,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
-    <key>UIStatusBarHidden</key>
-    <true/>
+	<key>UIStatusBarHidden</key>
+	<true/>
 </dict>
 </plist>
